# zero2prod

./: .containerignore  .env  .env.example  .gitignore  Cargo.toml  Containerfile  README.md  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yaml  general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20250406201424_add_status_to_subscriptions.sql  20250406202456_make_status_not_null_in_subscriptions.sql  20250406203048_create_subscription_tokens_table.sql  20250501140605_seed_user.sql
scripts/: init_db.sh  init_redis.sh  prune_db.sql
src/: configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: basic.rs  middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs  subscriber_token.rs
src/routes/: helpers.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
