[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Pedro Moleiro <pedro.r.p.moleiro@outlook.com>"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = { version = "0.14", features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Using table-like toml syntax to avoid a super-long line
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
