[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
authors = ["Pedro Moleiro <pedro.r.p.moleiro@outlook.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.10"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.6"
config = { version = "0.15", features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.10", features = ["serde"] }
unicode-segmentation = "1.12"
validator = "0.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.9", features = ["std_rng"] }

# Using table-like toml syntax to avoid a super-long line
[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
once_cell = "1.21"
claim = "0.5"
fake = "4.2"
quickcheck = "1.0"
quickcheck_macros = "1.0"
wiremock = "0.6"
serde_json = "1.0"
linkify = "0.10"
